# medichek

./: .gitignore  README.md  dev_server.py  index.html  pyproject.toml  readme.md  requirements.txt  run_client.bat  run_dev_server.bat
assets/: index-0eqZ27nb.js  index-B2R_XSPe.css  index-BFicyeo1.js  index-BLCGeaqp.js  index-BXbENb-7.js  index-BgSWIycH.js  index-BoKRLyde.js  index-Bq5DyZd2.css  index-C97GmgKH.js  index-CLgBK8XB.js  index-CNhXcKFJ.js  index-CR39AUOg.js  index-CWfTm8ZU.js  index-Cb3IJZoP.js  index-Ci_oeedv.js  index-CyZv4O75.js  index-Cya7KMWp.js  index-DJ5NhRft.js  index-DZLQcYT3.js  index-D_V3muSe.js  index-DgTZ2KUg.js  index-DjjfjNSO.js  index-DtPsQZFa.js  index-DtSC9AXL.js  index-HPvOk5wX.js  index-K5w0gbvs.js  index-MkETytfc.js  index-aQUiwQfK.js  index-cpnMIJtw.js  index-gi6-woqW.js  index-hGS4THh-.js  index-jOvnCJ4a.js  index-lHomboft.js  index-vJJBst14.js  index-wEjO3QQI.js  index-xq53CU7n.js
medichek-web/: .gitignore  DEPLOY.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  STATIC_DEPLOYMENT.md  index.html  package-lock.json  package.json  start-static.ps1  vite.config.ts
medichek-web - old/: index.html  main.js  package.json  script.js
medichek-web/src/: camera.ts  config.ts  dom.ts  main.ts  mediapipe_handler.ts  mp_manager.ts  ocr_handler.ts  server_manager.ts  style.css  translations.ts  ui_manager.ts  utils.ts
medichek-web/static/: config.example.js  config.js  script.js  style.css  translations.js
medichek-web/templates/: index.html
medichek_client.egg-info/: PKG-INFO  SOURCES.txt
templates/: index.html
(+25 files in other folders)
