[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medichek-client"
version = "0.1.0"
description = "Medichek client package (patient-side)"
authors = [ { name = "medichek" } ]
readme = "readme.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
